// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FunctionCalls.sol - {"bracketSpacing":true} format 1`] = `
====================================options=====================================
bracketSpacing: true
parsers: ["solidity-parse"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
contract FunctionCalls {
    function foo() {
        address veryLongValidatorAddress = veryVeryVeryLongSignature.popLast20Bytes();
    }

    function foo() {
      Voter you = Voter(1, true);

      Voter me = Voter({
          weight: 2,
          voted: abstain()
      });

      Voter airbnb = Voter({
        weight: 2,
        voted: true,
      });
    }
}

=====================================output=====================================
contract FunctionCalls {
    function foo() {
        address veryLongValidatorAddress =
            veryVeryVeryLongSignature.popLast20Bytes();
    }

    function foo() {
        Voter you = Voter(1, true);

        Voter me = Voter({ weight: 2, voted: abstain() });

        Voter airbnb = Voter({ weight: 2, voted: true });
    }
}

================================================================================
`;

exports[`FunctionCalls.sol format 1`] = `
====================================options=====================================
parsers: ["solidity-parse"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
contract FunctionCalls {
    function foo() {
        address veryLongValidatorAddress = veryVeryVeryLongSignature.popLast20Bytes();
    }

    function foo() {
      Voter you = Voter(1, true);

      Voter me = Voter({
          weight: 2,
          voted: abstain()
      });

      Voter airbnb = Voter({
        weight: 2,
        voted: true,
      });
    }
}

=====================================output=====================================
contract FunctionCalls {
    function foo() {
        address veryLongValidatorAddress =
            veryVeryVeryLongSignature.popLast20Bytes();
    }

    function foo() {
        Voter you = Voter(1, true);

        Voter me = Voter({weight: 2, voted: abstain()});

        Voter airbnb = Voter({weight: 2, voted: true});
    }
}

================================================================================
`;
